--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="p-1 texto-secundario shadow barraNav">
     <ul class="nav justify-content-center align-items-center flex-nowrap px-3" role="tablist" id="navId">
       <li class="nav-item me-auto">
-        <a class="nav-link" routerLink="cuentas" (click)="deselegirCuenta()">
+        <a class="nav-link seleccionado" routerLink="cuentas" id="home" (click)="deselegirCuenta()">
           <span class="texto-resaltado">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home pb-1 mx-1" width="24"
               height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
