--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -20,6 +20,16 @@ a:hover{
     background-color: white;
     transition: .5s;
 }
+.seleccionado {
+    box-shadow: 0px 8px 0px rgb(255, 255, 255), 0px 16px 0px rgb(39, 160, 76);;
+    color: green;
+    transform: translateY(5px);
+    transition: .5s;
+}
+.seleccionado:hover {
+    background-color: white;
+    transition: .5s;
+}
 
 .barraNav{
     font-size: 1.1em;
