--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,13 +1,12 @@
 <div class="container">
+  <app-product></app-product>
 
     <div *ngIf="getSessionStorage()!=null && getSessionStorage()!=''">
         <app-product></app-product>
     </div>
     <div *ngIf="getSessionStorage()==null ||  getSessionStorage()==''">
         <app-login></app-login>
-       
     </div>
-    
 </div>
 
 
