--- a/src/app/componentes/product/product.component.html
+++ b/src/app/componentes/product/product.component.html
@@ -1,8 +1,8 @@
-<div class="container d-flex justify-content-center">
+<div class="container d-flex justify-content-center p-3">
   <div class="row mt-5 p-2">
     <div class="col-md-3" *ngFor="let product of products">
       <div class="card overflow-hidden mb-3">
-        <img src="{{ product.image }}" class="card-img-top">
+        <img [src]="getImageProduct(product.image)" alt="{{ product.title }}">
         <div class="card-body pt-0 px-0">
           <div class="justify-content-between mb-0 px-3">
             <small class="text-muted mt-1 d-block">{{ product.title }}</small>
