--- a/src/app/componentes/product/product.component.html
+++ b/src/app/componentes/product/product.component.html
@@ -9,7 +9,9 @@
           </div>
           <div class="d-flex flex-row justify-content-between mb-0 px-3">
             <small class="text-muted mt-1"><b>{{ product.description }}</b></small>
-            <h5>{{ product.price }}{{ product.symbol }}</h5>
+          </div>
+          <div class="d-flex flex-row justify-content-between mb-0 px-3">
+            <small class="text-muted mt-1"><b>{{ product.price }}</b></small>
           </div>
           <div class="mx-3 mt-3 d-block text-center">
             <button type="button" class="btn btn-block text-black btn-outline-secondary ps-5 pe-5">Agregar al carrito</button>
