--- a/src/app/componentes/product/product.component.html
+++ b/src/app/componentes/product/product.component.html
@@ -14,12 +14,11 @@
   </div>
 </div>
 
-
 <section class="bg-light pt-3 pb-5">
-  <h2></h2>
+  <div class="d-block text-center display-6">ELECTRÓNICA</div>
   <div class="container justify-content-center">
     <div class="row mt-3 p-2">
-      <h3 class="text-uppercase border-bottom mb-2">Resultados</h3>
+      <h4 class="text-uppercase border-bottom mb-2">Resultados</h4>
       <p class="mb-3">Más información sobre estos resultados.</p>
     </div>
     <div class="row p-2">
