--- a/src/app/cuentas/cuentas.component.html
+++ b/src/app/cuentas/cuentas.component.html
@@ -3,6 +3,12 @@
     <div class="mb-4 p-5 border-bottom texto-secundario shadow">
         <h1>Bienvenido {{usuario}} a tu Área personal</h1>
         <p>Consulta tu saldo total o elige una cuenta para ver más detalles, operar o consultar movimientos</p>
+        <ng-container *ngIf="comprobarRolAdmin()">
+            <button data-bs-toggle="collapse" data-bs-target="#demo">Collapsible</button>
+            <div id="demo" class="collapse">
+                <app-panel-administrador class="container"></app-panel-administrador>
+            </div>
+        </ng-container>
     </div>
     <ng-container *ngIf="yaTieneCuentas()">
         <div class="my-4 border-bottom fondo-primario texto-resaltado shadow d-flex">
@@ -10,7 +16,7 @@
                 <h2>Saldo total disponible:</h2>
                 <h5 class="ms-5 pt-2">{{saldoTotal}}€</h5>
             </div>
-            
+
             <img src="assets/boveda.png" class="w-25 float-end">
         </div>
         <div class="my-4 p-5 border-bottom shadow">
@@ -31,7 +37,7 @@
                             </svg>{{cuenta.number}}
                         </p>
                     </h5>
-    
+
                     <div>
                         SALDO DE LA CUENTA:
                         {{saldo[i]}}€
@@ -46,7 +52,7 @@
 
     <div class="my-4 p-5 fondo-primario texto-resaltado shadow">
         <h2 class="texto-secundario mb-3">Crea tu cuenta en segundos:</h2>
-        
+
 
     </div>
 </div>
