--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,8 @@
   <div class="p-1 texto-secundario shadow barraNav">
     <ul class="nav justify-content-center align-items-center flex-nowrap px-3" role="tablist" id="navId">
       <li class="nav-item me-auto">
-        <a class="nav-link seleccionado" routerLink="cuentas" id="home" (click)="deselegirCuenta()">
+        <a class="nav-link" routerLink="cuentas" id="home">
+        <!-- <a class="nav-link seleccionado" routerLink="cuentas" id="home" (click)="deselegirCuenta()"> -->
           <span class="texto-resaltado">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home pb-1 mx-1" width="24"
               height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
@@ -29,13 +30,13 @@
       </li>  
       <ng-container *ngIf="cuentaElegida">        
         <li class="nav-item ms-5 px-3">
-          <a class="nav-link active" data-bs-toggle="pill" routerLink="detalles">Detalles</a>
+          <a class="nav-link" routerLink="detalles" id="detalles">Detalles</a>
         </li>
         <li class="nav-item px-3">
-          <a class="nav-link" data-bs-toggle="pill" routerLink="movimientos">Movimientos</a>
+          <a class="nav-link" routerLink="movimientos" id="movimientos">Movimientos</a>
         </li>
         <li class="nav-item px-3">
-          <a class="nav-link" data-bs-toggle="pill" routerLink="operaciones">Operar</a>
+          <a class="nav-link" routerLink="operaciones" id="operaciones">Operar</a>
         </li>
         <li class="nav-item ms-auto pe-3 texto-resaltado">
           <span class="">Cuenta: {{cuenta}}</span>
