--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,4 +1,3 @@
 <div class="d-flex justify-content-end align-items-center">
-    <button mat-raised-button (click)="openDialog()"><mat-icon>home</mat-icon>Ingresar</button>
-    <button mat-raised-button > Registrarse</button>
+    <button mat-raised-button (click)="openDialog()"><mat-icon>person</mat-icon></button>
 </div>
