--- a/src/app/movimientos/movimientos.component.html
+++ b/src/app/movimientos/movimientos.component.html
@@ -7,7 +7,7 @@
       <th>Importe</th>
     </tr>
     <tr *ngFor="let operacion of operaciones">
-      <td>{{ operacion.date }}</td>
+      <td>{{ operacion.date | date:'dd/MM/yyyy' }}</td>
       <td>{{ operacion.description.description }}</td>
       <td>{{ operacion.current }}</td>
     </tr>
