--- a/src/app/operaciones/operaciones.component.html
+++ b/src/app/operaciones/operaciones.component.html
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-
+    <h1>{{mensaje}}</h1>
 
     <div class="btn-group">
       <button class="btn btn-success" (click)="realizarMovimiento('Ingreso')">Ingresar</button>
