--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,3 +1,7 @@
-<div class="d-flex justify-content-end align-items-center">
+<div class="d-flex justify-content-end align-items-center" *ngIf="!logado">
     <button mat-raised-button (click)="openDialog()"><mat-icon>person</mat-icon></button>
+</div>
+<div class="d-flex justify-content-end align-items-center" *ngIf="logado">
+    <button mat-raised-button>{{user}} perfil de usuario</button>
+    <button mat-raised-button (click)="closeSession()"> <mat-icon>exit_to_app</mat-icon></button>
 </div>
