--- a/src/app/detalles-cuenta/detalles-cuenta.component.html
+++ b/src/app/detalles-cuenta/detalles-cuenta.component.html
@@ -5,7 +5,7 @@
 
 
 <div class="container fondo-primario">
-  <h1 style="text-align: center;">DATELLES DE LA  CUENTA </h1><br>         
+  <h1 style="text-align: center;">DETALLES DE LA  CUENTA </h1><br>         
   <table class="table">
     <thead>
       <tr>
