--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,4 +1,4 @@
- <footer class="footer">
+ <footer class="footer container-fluid">
     <div class="row p-3 pb-1 bg-dark text-white">
         <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="h3"> <strong><em>TALENTOS</em></strong></p>
