--- a/src/app/componentes/existing-product/existing-product.component.html
+++ b/src/app/componentes/existing-product/existing-product.component.html
@@ -27,5 +27,21 @@
       <button type="button" class="btn btn-primary" (click)="openModal('','')" data-bs-toggle="modal" data-bs-target="#myModalProduct">Añadir nuevo producto</button>
     </div>
 
+    <nav aria-label="...">
+      <ul class="pagination">
+        <li class="page-item disabled">
+          <a class="page-link">Previous</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item active" aria-current="page">
+          <a class="page-link" href="#">2</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#">Next</a>
+        </li>
+      </ul>
+    </nav>
+
     <app-modal-existing-products (eventoExistingProduct)="handleEventoProduct($event)"></app-modal-existing-products>
   </div>
