--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<router-outlet class="min-vh-100"></router-outlet>
+<div class="min-vh-100">
+  <router-outlet ></router-outlet>
+</div>
 <app-footer></app-footer>
