--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
 <body class="green-background">
     <footer class="footer">
         <footer class="footer bg-success">
-            <div class="container ">
+            <div class="container mt-5">
                 <div class="footer-content">
                     <div class="footer-column">
                         <h2>Contacto</h2>
@@ -14,22 +14,7 @@
                         <p>Email: info@bankinsert.com</p>
                         <p>Dirección: Calle de Fray Luis de León,11, 28012 Madrid</p>
                     </div>
-                    <div class="footer-column">
-                        <h3>Enlaces rápidos</h3>
-                        <ul>
-                            <h6>
-                                <li><a class="texto-primario" href="header.component.html">Inicio</a></li>
-                                <li><a class="texto-primario" href="#">Detalles</a></li>
-                                <li><a class="texto-primario" href="movimientos.component.html">Movimientos</a></li>
-                                <li><a class="texto-primario" href="operaciones.component.html">Operaciones</a></li>
-
-
-                                <li><a class="texto-primario" href="#">Aviso legal</a></li>
-                                <li><a class="texto-primario" href="#">Cookies</a></li>
-                            </h6>
-                        </ul>
-                    </div>
-
+                    
 
                     <div class="footer-column">
                         <h3>Redes sociales</h3>
