color de footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,9 +2,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
-<body class="green-background">
+
     <footer class="footer">
-        <footer class="footer bg-success">
+        <footer class="footer fondo-secundario">
             <div class="container mt-5">
                 <div class="footer-content">
                     <div class="footer-column">
@@ -15,6 +15,7 @@
                         <p>Dirección: Calle de Fray Luis de León,11, 28012 Madrid</p>
                     </div>
                     
+
 
                     <div class="footer-column">
                         <h3>Redes sociales</h3>
