--- a/src/app/componentes/existing-product/existing-product.component.html
+++ b/src/app/componentes/existing-product/existing-product.component.html
@@ -20,14 +20,12 @@
       </tr>
     </table>
 
-    <!--<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label=""></mat-paginator>-->
-
     <div class="w-100 text-center">
       <div class="text-primary mb-3" role="alert">{{ message }}</div>
       <button type="button" class="btn btn-primary" (click)="openModal('','')" data-bs-toggle="modal" data-bs-target="#myModalProduct">Añadir nuevo producto</button>
     </div>
 
-    <nav aria-label="...">
+    <!--<nav aria-label="...">
       <ul class="pagination">
         <li class="page-item disabled">
           <a class="page-link">Previous</a>
@@ -41,7 +39,7 @@
           <a class="page-link" href="#">Next</a>
         </li>
       </ul>
-    </nav>
+    </nav>-->
 
     <app-modal-existing-products (eventoExistingProduct)="handleEventoProduct($event)"></app-modal-existing-products>
   </div>
