--- a/src/app/detalles-cuenta/detalles-cuenta.component.html
+++ b/src/app/detalles-cuenta/detalles-cuenta.component.html
@@ -9,7 +9,7 @@
   <table class="table">
     <thead>
       <tr>
-        <th>NOMBRE DE CUENTA </th>
+        <th>TIPO DE CUENTA </th>
         <th>NUMERO DE CUENTA </th>
         <th>CON UN INTERÉS</th>
         <th>SU SALDO ACTUAL</th>
