--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-existing-product></app-existing-product>
 <div class="min-vh-100">
   <router-outlet ></router-outlet>
 </div>
