--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="mb-5 text-center bg-dark text-white p-4">
   <div>
-    <h1 class="fs-3 fs-md-4">OnceMazón</h1>
+    <h1 class="fs-3 fs-md-4">ONCEMAZON</h1>
   </div>
   <app-nav></app-nav>  
 </header>
