--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,9 +1,10 @@
  <footer class="footer container-fluid">
     <div class="row p-3 pb-1 bg-dark text-white">
         <div class="col-xs-12 col-md-6 col-lg-3">
-            <p class="h3"> <strong><em>TALENTOS</em></strong></p>
+            <p class="h3"> <strong><em>ONCEMAZON</em></strong></p>
                 <p class="fas fa-home me-3">Madrid, Lavapies</p>
         </div>
+        º
         <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="h6 mb-2">PRODUCTOS</p>
 
